[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/VolumeSlider.gd" type="Script" id=1]

[node name="VolumeSlider" type="VBoxContainer"]
margin_left = 213.0
margin_right = 213.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 79.0
margin_bottom = 14.0
text = "SFX Volume:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 79.0
margin_bottom = 38.0

[node name="MuteButton" type="Button" parent="HBoxContainer"]
margin_right = 45.0
margin_bottom = 20.0
text = "Mute"

[node name="VolumeSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 49.0
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[connection signal="pressed" from="HBoxContainer/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
